2010-01-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlWriter.cs : handle a corner case for empty string handling 
	  difference between XmlTextWriter and XmlWriter.Create().

2009-11-27  Atsushi Enomoto  <atsushi@ximian.com>

	* NamespaceHandling.cs, XmlWriterSettings.cs, XmlTextWriter2.cs:
	  implement NamespaceHandling support for Moonlight.

2009-11-17  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlConvert.cs : fix DateTimeOffset roundtrip by giving format
	  strings in refined order. Patch by Santa Marta, at:
	  http://irc.gimite.net/channel/mono-jp/archive/20091105
	  ( http://smdn.invisiblefulmoon.net/misc/forum/programming/#n10 )

2009-11-13  Andreia Gaita  <avidigal@novell.com>

	* XmlNamespaceManager.cs: XmlReader.Read calls LookupNamespace via
	the internal sig, which skips any overrides that might exist on
	subclasses, so redirect all calls to the public call to make sure
	all overrides are called as well.
	Make AddNamespace, HasNamespace and RemoveNamespace private.

2009-11-11  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlDocument.cs, XmlElement.cs, XmlAttribute.cs,
	  XmlAttributeCollection.cs :
	  when CreateElement() and/or CreateAttribute() are overriden,
	  use overriden method. Otherwise, use internal optimal ones.
	  Fixed bug #549839.

2009-11-11  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlNodeReaderImpl.cs : when the reader is at attribute value,
	  MoveToNextAttribute() incorrectly moved to the first attribute.
	  Fixed bug #550379.

2009-10-23  Andreia Gaita  <avidigal@novell.com>

	* XmlConvert.cs: make ToUri static, fixes #548918 (moon)

2009-10-05  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlConvert.cs : fix wrong ToDateTimeOffset loop, based on the
	  patch by David Mitchell.

2009-09-15  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlAttributeCollection.cs : removed duplicate ID attribute check
	  here as this behavior not specifically defined by W3C DOM Level 2
	  specification. Fixed bug #508296.
